[package]
name = "cczu-ical-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cczu-ical-rs"
path = "src/main.rs"

[lib]
name = "cczuical"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
icalendar = "0.16.0"
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "v3"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
