[package]
name = "cczu_ical_rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cczu-ical-rs"
path = "src/main.rs"

[lib]
name = "cczu_ical_rs"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
chrono = "0.4.33"
icalendar = "0.16.0"
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = [
    "cookies",
    "rustls",
], default-features = false }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "v3"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
