[package]
name = "cczu_ical_rs"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cczu-ical-rs"
path = "src/main.rs"

[lib]
name = "cczu_ical_rs"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
chrono = "0.4.34"
icalendar = "0.16.0"
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "*", features = ["cookies", "native-tls-vendored"] }
scraper = "*"
serde = { version = "*", features = ["serde_derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "v3"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
